[gd_scene load_steps=17 format=2]

[ext_resource path="res://pokemon/beer0004.png" type="Texture" id=1]
[ext_resource path="res://pokemon/WizardHat0006.png" type="Texture" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://sprites/progress.png" type="Texture" id=4]
[ext_resource path="res://sprites/hp.png" type="Texture" id=5]
[ext_resource path="res://widgets/info_box.tscn" type="PackedScene" id=6]
[ext_resource path="res://widgets/menu_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://battle/battle.gd" type="Script" id=8]
[ext_resource path="res://sprites/panel.png" type="Texture" id=11]
[ext_resource path="res://widgets/menu.gd" type="Script" id=12]
[ext_resource path="res://sprites/line (copy 1).png" type="Texture" id=13]
[ext_resource path="res://sprites/l.png" type="Texture" id=14]
[ext_resource path="res://sprites/line.png" type="Texture" id=15]
[ext_resource path="res://battle/hud.gd" type="Script" id=16]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0

[node name="battle" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
color = Color( 0.588235, 0.588235, 0.588235, 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardHat0006" type="Sprite" parent="."]
position = Vector2( 25.2481, 73.0153 )
scale = Vector2( 0.509615, 0.509615 )
texture = ExtResource( 2 )

[node name="beer" type="Sprite" parent="."]
position = Vector2( 122.856, 24.691 )
scale = Vector2( 0.486769, 0.486769 )
texture = ExtResource( 1 )

[node name="enemy_position" type="Position2D" parent="."]
position = Vector2( 122.981, 30.6927 )

[node name="player_position" type="Position2D" parent="."]
position = Vector2( 32.3745, 76.942 )

[node name="rival_stats" type="Node2D" parent="."]
position = Vector2( -63.7363, -55.7418 )
script = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="tween" type="Tween" parent="rival_stats"]

[node name="level_label" type="Sprite" parent="rival_stats"]
position = Vector2( 101.62, 68.3017 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="Label" parent="rival_stats"]
margin_left = 72.3455
margin_top = 51.8856
margin_right = 232.345
margin_bottom = 77.8856
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BULBASAUR"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="rival_stats"]
margin_left = 103.714
margin_top = 59.5666
margin_right = 263.714
margin_bottom = 85.5666
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="rival_stats"]
visible = false
margin_left = 96.0
margin_top = 76.0
margin_right = 145.0
margin_bottom = 102.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20/    20"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hp_label" type="Sprite" parent="rival_stats"]
position = Vector2( 87.0532, 76.0747 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="hp_bar" type="Sprite" parent="rival_stats"]
position = Vector2( 119.804, 75.8071 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="line" type="Line2D" parent="rival_stats/hp_bar"]
position = Vector2( -24, 0 )
points = PoolVector2Array( 0, 0, 48, 0 )
width = 2.0
default_color = Color( 0.133333, 0.494118, 0.192157, 1 )

[node name="border" type="Sprite" parent="rival_stats"]
position = Vector2( 113.104, 74.1594 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="player_stats" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="level_label" type="Sprite" parent="player_stats"]
position = Vector2( 117.99, 68.5001 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="Label" parent="player_stats"]
margin_left = 80.1833
margin_top = 51.9848
margin_right = 240.183
margin_bottom = 77.9848
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BULBASAUR"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="player_stats"]
margin_left = 120.084
margin_top = 60.3603
margin_right = 280.084
margin_bottom = 86.3603
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="player_stats"]
margin_left = 96.0
margin_top = 76.0
margin_right = 145.0
margin_bottom = 102.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20/ 20"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hp_label" type="Sprite" parent="player_stats"]
position = Vector2( 87.0532, 76.0747 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="hp_bar" type="Sprite" parent="player_stats"]
position = Vector2( 119.804, 75.8071 )
texture = ExtResource( 4 )

[node name="line" type="Line2D" parent="player_stats/hp_bar"]
position = Vector2( -24, 0 )
points = PoolVector2Array( 0, 0, 48, 0 )
width = 2.0
default_color = Color( 0.133333, 0.494118, 0.192157, 1 )

[node name="border" type="Sprite" parent="player_stats"]
position = Vector2( 110.729, 82.4094 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="tween" type="Tween" parent="player_stats"]

[node name="info" parent="." instance=ExtResource( 6 )]

[node name="action_menu" type="PanelContainer" parent="."]
visible = false
margin_left = 60.2832
margin_top = 96.0511
margin_right = 160.283
margin_bottom = 144.051
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
menu_items = [ NodePath("m/m/rows/col_1/fight"), NodePath("m/m/rows/col_1/item"), NodePath("m/m/rows/col_2/pokemon"), NodePath("m/m/rows/col_2/run") ]

[node name="m" type="NinePatchRect" parent="action_menu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 98.9998
margin_bottom = 47.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="action_menu/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rows" type="HBoxContainer" parent="action_menu/m/m"]
margin_left = 6.0
margin_top = 6.0
margin_right = 91.0
margin_bottom = 40.0

[node name="col_1" type="VBoxContainer" parent="action_menu/m/m/rows"]
margin_right = 47.0
margin_bottom = 34.0

[node name="fight" parent="action_menu/m/m/rows/col_1" instance=ExtResource( 7 )]
capitalize = true
text = "fight"
selected = true

[node name="item" parent="action_menu/m/m/rows/col_1" instance=ExtResource( 7 )]
margin_top = 17.0
margin_bottom = 30.0
capitalize = true
text = "item"

[node name="col_2" type="VBoxContainer" parent="action_menu/m/m/rows"]
margin_left = 51.0
margin_right = 84.0
margin_bottom = 34.0

[node name="pokemon" parent="action_menu/m/m/rows/col_2" instance=ExtResource( 7 )]
margin_right = 33.0
capitalize = true
text = "pkm"

[node name="run" parent="action_menu/m/m/rows/col_2" instance=ExtResource( 7 )]
margin_top = 17.0
margin_right = 33.0
margin_bottom = 30.0
capitalize = true
text = "run"

[node name="fight_menu" type="PanelContainer" parent="."]
visible = false
margin_left = 34.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 2 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="NinePatchRect" parent="fight_menu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 47.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="fight_menu/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 4
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="VBoxContainer" parent="fight_menu/m/m"]
margin_left = 6.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 40.0
custom_constants/separation = -5

[node name="items" type="PanelContainer" parent="."]
visible = false
margin_left = 32.0
margin_top = 18.0
margin_right = 160.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 10
custom_styles/panel = SubResource( 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="NinePatchRect" parent="items"]
margin_left = 1.0
margin_top = 1.0
margin_right = 127.0
margin_bottom = 85.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="m" type="MarginContainer" parent="items/m"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col_1" type="VBoxContainer" parent="items/m/m"]
margin_left = 6.0
margin_top = 6.0
margin_right = 120.0
margin_bottom = 78.0
